# material

./: .gitignore
Clase dash/: app.py  pyproject.toml  tips.csv
Clase dash/pages/: datos.py  index.py
Clase fastapi/: calificaciones.csv  ejemplo_request.py  main.py  pyproject.toml
Clase html/: about.html  dashboard.html  home.html  index.html  inicio.html  maps.html
Clase html/css/: main.css
Proyecto final/backend/: main.py  pyproject.toml
Proyecto final/backend/modelos/: azcapotzalco_bajo impacto.joblib  benito juarez_bajo impacto.joblib  benito juarez_impacto medio.joblib  coyoacan_bajo impacto.joblib  coyoacan_impacto medio.joblib  cuajimalpa de morelos_alto impacto.joblib  cuajimalpa de morelos_bajo impacto.joblib  cuauhtemoc_impacto medio.joblib  gustavo a. madero_bajo impacto.joblib  iztacalco_bajo impacto.joblib  iztacalco_impacto medio.joblib  iztapalapa_alto impacto.joblib  la magdalena contreras_alto impacto.joblib  la magdalena contreras_bajo impacto.joblib  miguel hidalgo_alto impacto.joblib  milpa alta_impacto medio.joblib  tlahuac_alto impacto.joblib  tlahuac_bajo impacto.joblib  tlalpan_alto impacto.joblib  venustiano carranza_bajo impacto.joblib  venustiano carranza_impacto medio.joblib  xochimilco_alto impacto.joblib  xochimilco_bajo impacto.joblib
Proyecto final/data/: main.py  main_snowflake.py  pyproject.toml
Proyecto final/frontend/: app.py  pyproject.toml
Proyecto final/html/: acerca.html  index.html  mapas.html  predicciones.html
Proyecto final/html-dash-transform/: convert.py  pyproject.toml
Proyecto final/ml/: pyproject.toml  (+3 more)
(+63 files in other folders)
